# fastapi-django-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rename_project.sh  run_server.sh
src/project/: asgi.py  settings.py
src/prometeo/: asgi.py  settings.py  urls.py  wsgi.py
