[tool.poetry]
name = "fastapi-django-boilerplate"
version = "0.1.0"
description = "FastAPI with Django ORM boilerplate"
authors = ["César Pineda <pinedacesar94@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
